# python-project-50

./: -project-check.yml  .coverage  .gitignore  =1.9.4  Makefile  README.md  coverage.xml  demo.cast  gendiff_work.cast  pyproject.toml  test
.github/workflows/: my-project-check.yml  project-check.yml
coverage/: lcov.info
gendiff/: __init__.py  cli.py  diff_finder.py  generate.py  parser.py  tree_constants.py
gendiff/formatters/: stylish (copy).py  stylish (working correct ).py  stylish.py
gendiff/scripts/: gendiff.py
tests/: expected_results.py  test_diff_finder.py  test_diff_finder_2.py  test_generate_diff.py  test_generate_diff_2.py
tests/fixtures/: expected_results.py  expected_results.txt
