[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project - Difference Calculator"
authors = ["Ilyas Razyapov <razyapovig@gmail.com>"]
repository = "https://github.com/IlyasRT/python-project-50"
packages = [{ include = "gendiff" },]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
